Upgrade JTProximitySDK-Android to 1.8.+ and JTProximitySDK-iOS to 1.6.0

--- a/src/android/Kariboo.gradle
+++ b/src/android/Kariboo.gradle
@@ -3,11 +3,7 @@ repositories {
 }
 
 dependencies {
-   compile 'com.jointag:proximitysdk:1.6.0'
-   // other dependencies
-   compile 'com.android.support:appcompat-v7:26.0.0'
-   compile 'com.google.android.gms:play-services-ads:16.+'
-   compile 'com.google.android.gms:play-services-location:16.+'
+   compile 'com.jointag:proximitysdk:1.8.+'
 }
 
 android {
