--- a/plugin.xml
+++ b/plugin.xml
@@ -1,63 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin id="cordova-plugin-jointag-proximity" version="0.9.0" xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
-  <name>cordova-plugin-jointag-proximity</name>
-  <js-module name="Kariboo" src="www/cordova-plugin-jointag-proximity.js">
-    <clobbers target="Kariboo"/>
-  </js-module>
-  <preference name="KARIBOO_ID"/>
-  <dependecy id="cordova-plugin-enable-multidex" version="0.1.3"/>
-  <preference name="KARIBOO_SECRET"/>
-  <platform name="ios">
-    <config-file parent="/*" target="config.xml">
-      <feature name="KaribooPlugin">
-        <param name="ios-package" value="KaribooPlugin"/>
-        <param name="onload" value="true"/>
-      </feature>
-    </config-file>
-    <config-file target="*-Info.plist" parent="UIBackgroundModes">
-      <array>
-        <string>location</string>
-      </array>
-    </config-file>
-    <config-file target="*-Info.plist" parent="NSLocationWhenInUseUsageDescription">
-      <string>Questa applicazione ha bisogno di accedere alla tua posizione per fornirti un'esperienza ottimale.
-      </string>
-    </config-file>
-    <config-file target="*-Info.plist" parent="NSLocationAlwaysAndWhenInUseUsageDescription">
-      <string>Questa applicazione ha bisogno di accedere alla tua posizione per fornirti un'esperienza ottimale.
-      </string>
-    </config-file>
-    <config-file target="*-Info.plist" parent="NSLocationAlwaysUsageDescription">
-      <string>Questa applicazione ha bisogno di accedere alla tua posizione per fornirti un'esperienza ottimale.
-      </string>
-    </config-file>
-    <config-file target="*-Info.plist" parent="KaribooID">
-      <string>$KARIBOO_ID</string>
-    </config-file>
-    <config-file target="*-Info.plist" parent="KaribooSecret">
-      <string>$KARIBOO_SECRET</string>
-    </config-file>
-    <source-file src="src/ios/KaribooPlugin.m"/>
-    <framework src="JTProximitySDK" type="podspec" spec="~> 1.4.0"/>
-  </platform>
-  <platform name="android">
-    <config-file parent="/*" target="res/xml/config.xml">
-      <feature name="KaribooPlugin">
-        <param name="android-package" value="com.jointag.cordova.KaribooPlugin"/>
-        <param name="onload" value="true"/>
-      </feature>
-    </config-file>
-    <config-file parent="/*" target="res/values/strings.xml">
-      <string name="kariboo_id">$KARIBOO_ID</string>
-      <string name="kariboo_secret">$KARIBOO_SECRET</string>
-    </config-file>
-    <config-file parent="/*" target="AndroidManifest.xml">
-      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    </config-file>
-    <source-file src="src/android/KaribooPlugin.java" target-dir="src/com/jointag/cordova"/>
-    <framework src="src/android/Kariboo.gradle" custom="true" type="gradleReference"/>
-    <hook type="before_build" src="src/scripts/android.js"/>
-    <hook type="before_run" src="src/scripts/android.js"/>
-  </platform>
+    <name>cordova-plugin-jointag-proximity</name>
+    <js-module name="Kariboo" src="www/cordova-plugin-jointag-proximity.js">
+        <clobbers target="Kariboo"/>
+    </js-module>
+    <preference name="KARIBOO_ID"/>
+    <preference name="ENABLE_CMP" default="false"/>
+    <dependecy id="cordova-plugin-enable-multidex" version="0.1.3"/>
+    <preference name="KARIBOO_SECRET"/>
+    <platform name="ios">
+        <config-file parent="/*" target="config.xml">
+            <feature name="KaribooPlugin">
+                <param name="ios-package" value="KaribooPlugin"/>
+                <param name="onload" value="true"/>
+            </feature>
+        </config-file>
+        <config-file target="*-Info.plist" parent="UIBackgroundModes">
+            <array>
+                <string>location</string>
+            </array>
+        </config-file>
+        <config-file target="*-Info.plist" parent="NSLocationWhenInUseUsageDescription">
+            <string>Questa applicazione ha bisogno di accedere alla tua posizione per fornirti un'esperienza ottimale.
+            </string>
+        </config-file>
+        <config-file target="*-Info.plist" parent="NSLocationAlwaysAndWhenInUseUsageDescription">
+            <string>Questa applicazione ha bisogno di accedere alla tua posizione per fornirti un'esperienza ottimale.
+            </string>
+        </config-file>
+        <config-file target="*-Info.plist" parent="NSLocationAlwaysUsageDescription">
+            <string>Questa applicazione ha bisogno di accedere alla tua posizione per fornirti un'esperienza ottimale.
+            </string>
+        </config-file>
+        <config-file target="*-Info.plist" parent="KaribooID">
+            <string>$KARIBOO_ID</string>
+        </config-file>
+        <config-file target="*-Info.plist" parent="KaribooSecret">
+            <string>$KARIBOO_SECRET</string>
+        </config-file>
+        <config-file target="*-Info.plist" parent="EnableCmp">
+            <string>$ENABLE_CMP</string>
+        </config-file>
+        <source-file src="src/ios/KaribooPlugin.m"/>
+        <framework src="JTProximitySDK" type="podspec" spec="~> 1.6.0"/>
+    </platform>
+    <platform name="android">
+        <config-file parent="/*" target="res/xml/config.xml">
+            <feature name="KaribooPlugin">
+                <param name="android-package" value="com.jointag.cordova.KaribooPlugin"/>
+                <param name="onload" value="true"/>
+            </feature>
+        </config-file>
+        <config-file parent="/*" target="res/values/strings.xml">
+            <string name="kariboo_id">$KARIBOO_ID</string>
+            <string name="kariboo_secret">$KARIBOO_SECRET</string>
+            <string name="enable_cmp">$ENABLE_CMP</string>
+        </config-file>
+        <config-file parent="/*" target="AndroidManifest.xml">
+            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+        </config-file>
+        <config-file parent="/*" target="AndroidManifest.xml">
+            <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+        </config-file>
+
+        <!--appcompat v7-->
+        <preference name="APPCOMPACT_V7_VERSION" default="28.0.0"/>
+        <framework src="com.android.support:appcompat-v7:$APPCOMPACT_V7_VERSION"/>
+
+        <!--play services-->
+        <preference name="PLAY_SERVICES_ADS_VERSION" default="16.+"/>
+        <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_ADS_VERSION"/>
+
+        <preference name="PLAY_SERVICES_LOCATION_VERSION" default="16.+"/>
+        <framework src="com.google.android.gms:play-services-location:$PLAY_SERVICES_LOCATION_VERSION"/>
+
+        <!--custom gradle file-->
+        <source-file src="src/android/KaribooPlugin.java" target-dir="src/com/jointag/cordova"/>
+        <framework src="src/android/Kariboo.gradle" custom="true" type="gradleReference"/>
+
+        <!--hooks-->
+        <hook type="before_build" src="src/scripts/android.js"/>
+        <hook type="before_run" src="src/scripts/android.js"/>
+    </platform>
 </plugin>
