--- a/src/android/Kariboo.gradle
+++ b/src/android/Kariboo.gradle
@@ -3,7 +3,7 @@ repositories {
 }
 
 dependencies {
-   compile 'com.jointag:proximitysdk:1.8.+'
+   compile 'com.jointag:proximitysdk:1.10.1'
 }
 
 android {
